[project]
name = "justice-league"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "html5lib>=1.1",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "mechanicalsoup>=1.3.0",
    "pandas[pyarrow]>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "icecream>=2.1.4",
]
